--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
   "rules": {
     "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
     "react/react-in-jsx-scope": "off",
-    "react/no-this-in-sfc": "off"
+    "react/no-this-in-sfc": "off",
+    "jsx-a11y/control-has-associated-label": "off",
+    "no-await-in-loop": "off"
   }
 }
