--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
     "react/react-in-jsx-scope": "off",
     "react/no-this-in-sfc": "off",
     "jsx-a11y/control-has-associated-label": "off",
-    "no-await-in-loop": "off"
+    "no-await-in-loop": "off",
+    "import/prefer-default-export": "off",
+    "class-methods-use-this": "off"
   }
 }
